--- a/companySpending_vs_profit/companySpending_vs_profit.ipynb
+++ b/companySpending_vs_profit/companySpending_vs_profit.ipynb
@@ -582,7 +582,7 @@
     "#The small p-value and test-statistic of 0.8 suggests that the data is statistically significant and deviates from normality\n",
     "#The null hypotheses is rejected, implying that there is a significant relationship between the matrix of features and profitability\n",
     "\n",
-    "null_hypothesis = \"there is no significant between internal spending and profit\"\n",
+    "null_hypothesis = \"there is no significant relationship between internal spending and profit\"\n",
     "alternative_hypothesis = \"there is a significant relationship between internal spending and profit\"\n",
     "\n",
     "stat, p_value = shapiro(percent_accuracy)\n",
